# voice-channel-manager

./: .gitignore  .rustfmt.toml  Cargo.toml  Dockerfile  README.md  build.rs  railway.toml  start.sh
.github/workflows/: build-and-test.yml  rust.yml  test.yml
.github/workflows/docker/: compose.yaml
.github/workflows/rust-docker/: compose.yaml
migrations/: 1_create-prefixes-table.down.sql  1_create-prefixes-table.up.sql  20231014210335_create-prefixes-table.up.sql  20231022004806_create-template-channels-table.up.sql  20231022004806_create-voice-channels-table.down.sql  20231022004806_create-voice-channels-table.up.sql  20231027081725_create-child-channels-table.down.sql  20231027081725_create-child-channels-table.up.sql  2_create-template-channels-table.down.sql
src/: command_parser.rs  db.rs  events.rs  main.rs  prefixes.rs  util.rs  voice_channels.rs
src/prefixes/: commands.rs  db.rs
src/voice_channels/: commands.rs  db.rs  parser.rs  updater.rs
