[package]
name = "voice-channel-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
eyre = "0.6.8"
if_chain = "1.0.2"
poise = "0.5.7"
rustc-hash = "1.1.0"
serde_json = "1.0.107"
serenity = { version = "0.11.6", features = [] }

sqlx = { version = "0.7.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.39"
tracing-subscriber = { version = "0.3.17", features = ["time", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
