[package]
name = "voice-channel-manager"
version = "0.1.0"
edition = "2021"
description = "A Discord bot that manages voice channels."
repository = "https://www.github.com/bwallker/voice-channel-manager"
license-file = "LICENSE"
keywords = ["discord", "bot", "voice", "channel", "manager"]
categories = ["command-line-utilities"]

[profile.release]
lto = "fat"

[features]
default = []
nightly-features = []
beta-features = []

[lints.clippy]
cargo = "warn"
pedantic = "warn"
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
perf = "warn"


# Enable provenance lints when strict provenance is stable
# Enable must-not-suspend and nont-exhaustive-omitted-patterns when they are stable
[lints.rust]
absolute-paths-not-starting-with-crate = "forbid"
elided-lifetimes-in-paths = "warn"
explicit-outlives-requirements = "warn"
# fuzzy-provenance-casts = "forbid"
let-underscore-drop = "warn"
# lossy-provenance-casts = "forbid"
macro-use-extern-crate = "warn"
missing-abi = "forbid"
missing-debug-implementations = "warn"
missing-docs = "warn"
# must-not-suspend = "forbid"
# non-exhaustive-omitted-patterns = "warn"
pointer-structural-match = "forbid"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "forbid"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
unused-results = "warn"
unused-tuple-struct-fields = "warn"
variant-size-differences = "warn"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.7"
eyre = "0.6.8"
futures = "0.3.29"
if_chain = "1.0.2"
rustc-hash = "1.1.0"
serde_json = "1.0.107"
serenity = { version = "0.11.6", features = [] }

sqlx = { version = "0.7.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.39"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["time", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.18.2"
