[package]
name = "voice-channel-manager"
version = "0.1.0"
edition = "2021"
description = "A Discord bot that manages voice channels."
repository = "https://www.github.com/bwallker/voice-channel-manager"
license-file = "LICENSE"
keywords = ["discord", "bot", "voice", "channel", "manager"]
categories = ["command-line-utilities"]

[profile.release]
lto = "fat"
codegen-units = 1

[features]
default = []
nightly-features = []
beta-features = []

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple-crate-versions = "allow"
pedantic = { level = "warn", priority = -1 }
cast-possible-wrap = "allow"
cast-sign-loss = "allow"
perf = { level = "warn", priority = -1 }


# Enable provenance lints when strict provenance is stable
# Enable must-not-suspend and nont-exhaustive-omitted-patterns when they are stable
[lints.rust]
absolute-paths-not-starting-with-crate = "forbid"
elided-lifetimes-in-paths = "warn"
explicit-outlives-requirements = "warn"
# fuzzy-provenance-casts = "forbid"
let-underscore-drop = "warn"
# lossy-provenance-casts = "forbid"
macro-use-extern-crate = "warn"
missing-abi = "forbid"
missing-debug-implementations = "warn"
missing-docs = "warn"
# must-not-suspend = "forbid"
# non-exhaustive-omitted-patterns = "warn"
single-use-lifetimes = "warn"
trivial-casts = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "forbid"
unused-crate-dependencies = "warn"
unused-extern-crates = "warn"
unused-import-braces = "warn"
unused-lifetimes = "warn"
unused-macro-rules = "warn"
unused-qualifications = "warn"
unused-results = "warn"
variant-size-differences = "warn"

[dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15.7"
eyre = "0.6.12"
futures = "0.3.31"
if_chain = "1.0.2"
poise = "0.6.1"
rustc-hash = "2.0.0"
serde_json = "1.0.132"
serenity = { version = "0.12.2", features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
], default-features = false }

sqlx = { version = "0.8.2", features = [
    "sqlx-postgres",
    "postgres",
    "runtime-tokio",
] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["time", "env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.23.0"
